# ROS2

ROS2-CPP-Course/: CLAUDE.md  README.md  (+4 more)
ROS2-CPP-Course/02-ros2-fundamentals/examples/executor_example/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/02-ros2-fundamentals/examples/executor_example/src/: callback_groups_node.cpp  multi_threaded_node.cpp  single_threaded_node.cpp  thread_safe_counter.cpp
ROS2-CPP-Course/02-ros2-fundamentals/examples/multi_node_communication/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/02-ros2-fundamentals/examples/multi_node_communication/src/: coordinator_node.cpp  monitor_node.cpp  processor_node.cpp  sensor_node.cpp
ROS2-CPP-Course/02-ros2-fundamentals/examples/parameters_example/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/02-ros2-fundamentals/examples/parameters_example/config/: robot_params.yaml
ROS2-CPP-Course/02-ros2-fundamentals/examples/parameters_example/src/: configurable_robot.cpp  dynamic_parameters.cpp  parameter_node.cpp
ROS2-CPP-Course/02-ros2-fundamentals/examples/pubsub_example/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/02-ros2-fundamentals/examples/pubsub_example/src/: listener_node.cpp  parameter_talker.cpp  talker_node.cpp
ROS2-CPP-Course/02-ros2-fundamentals/examples/service_example/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/02-ros2-fundamentals/examples/service_example/src/: add_client.cpp  add_server.cpp  calculator_server.cpp  robot_controller_server.cpp
ROS2-CPP-Course/02-ros2-fundamentals/examples/timer_logging_example/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/02-ros2-fundamentals/examples/timer_logging_example/src/: heartbeat_node.cpp  multi_timer_node.cpp  periodic_publisher.cpp  watchdog_node.cpp
ROS2-CPP-Course/02-ros2-fundamentals/exercises/01-pubsub-exercise/starter/: CMakeLists.txt  package.xml
ROS2-CPP-Course/02-ros2-fundamentals/exercises/02-service-exercise/solution/: CMakeLists.txt  package.xml
ROS2-CPP-Course/02-ros2-fundamentals/exercises/03-parameters-exercise/solution/: CMakeLists.txt  package.xml
ROS2-CPP-Course/02-ros2-fundamentals/exercises/04-integration-exercise/solution/: CMakeLists.txt  package.xml
ROS2-CPP-Course/02-ros2-fundamentals/mini-project/starter/: CMakeLists.txt  package.xml
ROS2-CPP-Course/02-ros2-fundamentals/mini-project/starter/config/: monitor.yaml  sensors.yaml
ROS2-CPP-Course/02-ros2-fundamentals/mini-project/starter/launch/: temperature_system.launch.py
ROS2-CPP-Course/02-ros2-fundamentals/mini-project/starter/msg/: Alert.msg  TemperatureReading.msg
ROS2-CPP-Course/02-ros2-fundamentals/mini-project/starter/src/: alerter_node.cpp  dashboard_node.cpp  monitor_node.cpp  temp_sensor_node.cpp
ROS2-CPP-Course/02-ros2-fundamentals/mini-project/starter/srv/: GetStats.srv
ROS2-CPP-Course/03-ros2-intermediate/examples/actions_example/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/03-ros2-intermediate/examples/actions_example/action/: Fibonacci.action  MoveRobot.action
ROS2-CPP-Course/03-ros2-intermediate/examples/actions_example/src/: fibonacci_client.cpp  fibonacci_server.cpp  task_manager.cpp
ROS2-CPP-Course/03-ros2-intermediate/examples/composition_example/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/03-ros2-intermediate/examples/composition_example/launch/: composed.launch.py  separate.launch.py  talker_listener.launch.py
ROS2-CPP-Course/03-ros2-intermediate/examples/composition_example/src/: image_processor_component.cpp  image_producer_component.cpp  listener_component.cpp  talker_component.cpp
ROS2-CPP-Course/03-ros2-intermediate/examples/launch_example/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/03-ros2-intermediate/examples/launch_example/config/: params.yaml
ROS2-CPP-Course/03-ros2-intermediate/examples/launch_example/launch/: advanced.launch.py  basic.launch.py  multi_robot.launch.py
ROS2-CPP-Course/03-ros2-intermediate/examples/launch_example/src/: controller_node.cpp  processor_node.cpp  sensor_node.cpp
ROS2-CPP-Course/03-ros2-intermediate/examples/tf2_example/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/03-ros2-intermediate/examples/tf2_example/src/: dynamic_tf_broadcaster.cpp  robot_tf_tree.cpp  static_tf_publisher.cpp  tf_listener.cpp
ROS2-CPP-Course/03-ros2-intermediate/exercises/01-action-countdown/starter/: CMakeLists.txt  package.xml
ROS2-CPP-Course/03-ros2-intermediate/mini-project/starter/: CMakeLists.txt  package.xml
ROS2-CPP-Course/03-ros2-intermediate/mini-project/starter/action/: MoveArm.action
ROS2-CPP-Course/03-ros2-intermediate/mini-project/starter/config/: arm_params.yaml
ROS2-CPP-Course/03-ros2-intermediate/mini-project/starter/launch/: arm_system.launch.py
ROS2-CPP-Course/03-ros2-intermediate/mini-project/starter/src/: arm_controller.cpp  kinematics.cpp
ROS2-CPP-Course/04-simulation/examples/gazebo_world_example/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/04-simulation/examples/gazebo_world_example/launch/: obstacle_course.launch.py
ROS2-CPP-Course/04-simulation/examples/gazebo_world_example/worlds/: obstacle_course.world
ROS2-CPP-Course/04-simulation/examples/rviz_visualization_example/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/04-simulation/examples/rviz_visualization_example/config/: visualization.rviz
ROS2-CPP-Course/04-simulation/examples/rviz_visualization_example/launch/: visualization.launch.py
ROS2-CPP-Course/04-simulation/examples/rviz_visualization_example/src/: interactive_marker_server.cpp  marker_publisher.cpp  path_visualizer.cpp
ROS2-CPP-Course/04-simulation/examples/sensor_robot_simulation/: CMakeLists.txt  README.md  package.xml
ROS2-CPP-Course/04-simulation/examples/sensor_robot_simulation/config/: simulation.rviz
ROS2-CPP-Course/04-simulation/examples/sensor_robot_simulation/launch/: simulation.launch.py
ROS2-CPP-Course/04-simulation/examples/sensor_robot_simulation/urdf/: sensor_robot.urdf.xacro
ROS2-CPP-Course/04-simulation/examples/urdf_robot_example/: CMakeLists.txt  README.md  package.xml
(+121 files in other folders)
