<?xml version="1.0"?>
<package format="3">
  <name>tf2_example</name>
  <version>1.0.0</version>
  <description>ROS2 TF2 demonstrations with broadcasters and listeners</description>
  <maintainer email="student@example.com">ROS2 Course Student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
