<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_visualization_example</name>
  <version>1.0.0</version>
  <description>RViz visualization examples: markers, interactive markers, path visualization</description>
  <maintainer email="student@example.com">ROS2 Course Student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>interactive_markers</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
